# rtr_control

rtr_control/: CMakeLists.txt  package.xml
rtr_double_arm_v7_control/: CMakeLists.txt  package.xml
rtr_double_arm_v7_control/config/: double_arm_v7_effort_control.yaml  double_arm_v7_joint_state_control.yaml  double_arm_v7a_diff_drive_control.yaml  double_arm_v7s_diff_drive_control.yaml  rtr_double_arm_v7_arm_control.yaml  rtr_double_arm_v7_joint_state_control.yaml  rtr_double_arm_v7a_control.yaml  rtr_double_arm_v7a_diff_drive_control.yaml  rtr_double_arm_v7a_effort_control.yaml  rtr_double_arm_v7a_position_control.yaml  rtr_double_arm_v7s_control.yaml  rtr_double_arm_v7s_diff_drive_control.yaml  rtr_double_arm_v7s_effort_control.yaml
rtr_double_arm_v7_control/launch/: control_agx.launch  control_aist.launch
